Updated index.html but submitted an issue regarding sidebar nav

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 
 SMTP_HOST=smtp.dreamhost.com
 SMTP_AUTH=true
-SMTP_USERNAME=admin@jamilimages.com
+SMTP_USERNAME=admin@jamilimages.com 
 SMTP_PASSWORD=TheFlyEagles24!
-SMTP_SECURE=tls
-SMTP_PORT=587
+SMTP_SECURE=ssl
+SMTP_PORT=465
